--- a/api-def/apiDefinition.yaml
+++ b/api-def/apiDefinition.yaml
@@ -2,16 +2,16 @@ openapi: 3.0.0
 
 info:
   version: "1.0.0"
-  title: User Management
-  description: The APIs For User Management Project In Zag Systems
+  title: User Management API
+  description: APIs for the User Management Project in Zag Systems
 
 paths:
   /addUser:
     post:
       tags:
         - User
-      operationId: register
       summary: Register a new user
+      operationId: registerUser
       requestBody:
         required: true
         content:
@@ -25,13 +25,15 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResponse'
+        '400':
+          description: Invalid input data
 
   /updateUser:
     put:
       tags:
         - User
-      operationId: updateUser
       summary: Update an existing user
+      operationId: updateUser
       requestBody:
         required: true
         content:
@@ -45,13 +47,17 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResponse'
+        '400':
+          description: Invalid input data
+        '404':
+          description: User not found
 
   /deleteUser/{userName}:
     delete:
       tags:
         - User
-      operationId: deleteUser
       summary: Delete a user
+      operationId: deleteUser
       parameters:
         - name: userName
           in: path
@@ -62,13 +68,15 @@ paths:
       responses:
         '200':
           description: Successfully deleted user
+        '404':
+          description: User not found
 
   /getAllUsers:
     get:
       tags:
         - User
+      summary: Retrieve all users
       operationId: getAllUsers
-      summary: Get a list of all users
       responses:
         '200':
           description: A list of all users
@@ -78,18 +86,20 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/UserResponse'
+        '500':
+          description: Server error
 
   /getUserById/{id}:
     get:
       tags:
         - User
+      summary: Retrieve user details by ID
       operationId: getUserById
-      summary: Get details of a user by ID
       parameters:
         - name: id
           in: path
           required: true
-          description: The ID of the user to retrieve
+          description: The unique identifier of the user
           schema:
             type: integer
       responses:
@@ -101,6 +111,8 @@ paths:
                 $ref: '#/components/schemas/UserResponse'
         '404':
           description: User not found
+        '500':
+          description: Server error
 
 components:
   schemas:
@@ -158,7 +170,7 @@ components:
       properties:
         id:
           type: integer
-          description: The ID of the user
+          description: The unique identifier of the user
         userName:
           type: string
           description: The username of the user
@@ -168,7 +180,7 @@ components:
           format: email
         password:
           type: string
-          description: The password of the user
+          description: The password for the user
         mobileNumber:
           type: string
           description: The mobile number of the user
@@ -196,7 +208,7 @@ components:
       properties:
         id:
           type: integer
-          description: The ID of the user
+          description: The unique identifier of the user
         userName:
           type: string
           description: The username of the user
