--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 spring.application.name=usermanagement_db
 
 server.port=8000
+spring.mvc.servlet.path=/api
+
+spring.datasource.url=jdbc:mysql://localhost:3306/usermanagement
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+
 
 
